# gaudyk

./: CMakeLists.txt  README.md
src/: defines.h  main.cpp  objects.h
